fix: disclaimer aligned to centre

--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ th {
 
 .disclaimer {
     font-size: x-small;
-    margin: 8px 0 12px;
+    margin: 8px auto 12px;
 }
 
 p {
